# Yocto-OTA-via-QNX-SOMEIP-ITI-ELProject

./: LICENSE  README.md
Final/: Host.md  README.md  boot.cmd  send-ota.sh
Final/CAPI-SOMEIP/: CMakeLists.txt  README.md  commonapi.ini  runQnx.sh  runYocto.sh
Final/CAPI-SOMEIP/config/: qnx-config.json  yocto-config.json
Final/CAPI-SOMEIP/fidl/: ota.fdepl  ota.fidl
Final/CAPI-SOMEIP/fidl/src-gen/v1/commonapi/: Ota.hpp  OtaProxy.hpp  OtaProxyBase.hpp  OtaSomeIPCatalog.json  OtaSomeIPDeployment.cpp  OtaSomeIPDeployment.hpp  OtaSomeIPProxy.cpp  OtaSomeIPProxy.hpp  OtaSomeIPStubAdapter.cpp  OtaSomeIPStubAdapter.hpp  OtaStub.hpp  OtaStubDefault.hpp
Final/CAPI-SOMEIP/src/: eventfd_stub.c  qnx.cpp  yocto.cpp
Final/Dashboard/: .gitignore  CMakeLists.txt  Main.qml  README.md  backend.cpp  backend.hpp  main.cpp
Final/QNX/: README.md  qnx-ota-validate.sh
Final/Yocto/: README.md  boot.scr  rpi-ota.sh
Phase-1/: README.md  boot.cmd  boot.scr  config.txt  send-ota.sh
Phase-2/: CMakeLists.txt  run_client.sh  run_server.sh
Phase-2/Config/: vsomeip-client.json  vsomeip-server.json
Phase-2/QNX-Comapi/: README.md
Phase-2/QNX-Comapi/fidl/: hello.fdepl
Phase-2/QNX-Comapi/fidl/src-gen/v1/commonapi/: Hello.hpp  HelloProxyBase.hpp  HelloSomeIPCatalog.json  HelloSomeIPDeployment.cpp  HelloSomeIPDeployment.hpp  HelloSomeIPProxy.hpp  HelloSomeIPStubAdapter.hpp  HelloStubDefault.hpp
Phase-2/QNX-Comapi/qnx-runtime/: helloClient  run_client.sh
Phase-2/QNX-Comapi/src/: eventfd_stub.c
Phase-2/Yocto-Comapi/: CMakeLists.txt  README.md  rpi_someip_libs.txt  run_client.sh  run_server.sh
Phase-2/Yocto-Comapi/Config/: vsomeip-client.json
Phase-2/Yocto-Comapi/fidl/src-gen/v1/commonapi/: HelloSomeIPProxy.cpp  HelloStub.hpp
Phase-2/Yocto-Comapi/src/: Client.cpp  Server.cpp
Phase-2/fidl/: hello.fidl
Phase-2/fidl/src-gen/v1/commonapi/: HelloProxy.hpp  HelloSomeIPStubAdapter.cpp
Phase-2/qnx-runtime/: run_client.sh  vsomeip-client.json
Phase-2/src/: Client.cpp  Server.cpp
